--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
+                <li><a href="https://discord.gg/lunapixel"><i class="fa-brands fa-discord"></i></a></li>
             </ul>
         </div>
     </div>
