--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             </ul>
         </div>
     </div>
-    <h1>aoskdaodkas</h1>
     <header>
         <div class="container">
-        <h1><a href="index.html"></a>MHELMIA</h1>
+        <h1><a href="index.html"></a>Muhammad Helmi Arrizal</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -28,5 +27,12 @@
         </ul>
         </div>
     </header>
+    <section class="bener">
+        <h2>WELCOME TO MY WEBSITE</h2>
+    </section>
+    <section class="about">
+        <div class="container">
+            <h2>ABOUT MHELMIA</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae libero vel lectus condimentum semper. Donec tristique quam vel nunc pellentesque, id fringilla metus congue. Sed non risus vel est scelerisque viverra. Maecenas vel bibendum ligula. Quisque tincidunt, orci id
 </body>
 </html>
