--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Helmi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <meta http-equiv="Content-Security-Policy" content="" />
 </head>
 <body>
     <div class="medsos">
@@ -21,18 +23,18 @@
         <div class="container">
         <h1><a href="index.html"></a>Muhammad Helmi Arrizal</h1>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="kontak.html">Contact</a></li>
+            <li><a href="#index">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#index">Contact</a></li>
         </ul>
         </div>
     </header>
     <section class="bener">
         <h2>WELCOME TO MY WEBSITE</h2>
     </section>
-    <section class="about">
+    <section id="about">
         <div class="container">
-            <h2>ABOUT MHELMIA</h2>
+            <h2>ABOUT</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae libero vel lectus condimentum semper. Donec tristique quam vel nunc pellentesque, id fringilla metus congue. Sed non risus vel est scelerisque viverra. Maecenas vel bibendum ligula. Quisque tincidunt, orci id
 </body>
 </html>
