--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Helmi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <meta http-equiv="Content-Security-Policy" content="" />
+    <meta http-equiv="Content-Security-Policy" content="self" />
 </head>
 <body>
     <div class="medsos">
         <div class="container">
             <ul>
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                <li><a href="https://wa.me/+62 812-8116-2066"><i class="fa-brands fa-whatsapp"></i></a></li>
                 <li><a href="https://discord.gg/lunapixel"><i class="fa-brands fa-discord"></i></a></li>
             </ul>
         </div>
