--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Helmi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'none'; style-src 'self'; img-src 'self';require-trusted-types-for 'script'"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'none'; style-src https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css; img-src 'self';require-trusted-types-for 'script'"/>
     
 
 
