--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="medsos">
         <div class="container">
             <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://wa.me/+62 812-8116-2066"><i class="fa-brands fa-whatsapp"></i></a></li>
-                <li><a href="https://discord.gg/lunapixel"><i class="fa-brands fa-discord"></i></a></li>
+                <! - - <li><a href="#"><i class="fa-brands fa-facebook"></i></facebook ></li> - - >
+                <li><a href="https://wa.me/+62 812-8116-2066"><i class="fa-brands fa-whatsapp"></i>WhatsApp </a> </li>
+                <li><a href="https://discord.gg/lunapixel"><i class="fa-brands fa-discord"></i>Discord </a></li>
             </ul>
         </div>
     </div>
