--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Helmi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'none'; style-src 'self'; img-src 'self';require-trusted-types-for 'script'"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'none'; style-src-elem 'self' 'unsafe-inline' https://fontawesome.com/ https://cdnjs.cloudflare.com ; img-src 'self';require-trusted-types-for 'script'; font-src 'self' https://fontawesome.com/ https://cdnjs.cloudflare.com;" />
     
 
 
@@ -16,7 +16,7 @@
     <div class="medsos">
         <div class="container">
             <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="img/windahkaget.png"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="https://wa.me/+62 812-8116-2066"><i class="fa-brands fa-whatsapp"></i></a></li>
                 <li><a href="https://discord.gg/lunapixel"><i class="fa-brands fa-discord"></i></a></li>
             </ul>
