--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Helmi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'none'; style-src 'none' 'unsafe-inline' https://fontawesome.com/ https://cdnjs.cloudflare.com ; img-src 'self';require-trusted-types-for 'script'; font-src 'self' https://fontawesome.com/ https://cdnjs.cloudflare.com;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'none'; style-src 'self' 'unsafe-inline' https://fontawesome.com/ https://cdnjs.cloudflare.com ; img-src 'self';require-trusted-types-for 'script'; font-src 'self' https://fontawesome.com/ https://cdnjs.cloudflare.com;" />
     
     <style>
         *{
